rust/transpiler/snapshots/control_flow@empty_blocks@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/control_flow/empty_blocks.hyper
---
def EmptyBlocks(flag: bool, items: list) -> str:
    _parts = []
    if flag:
        pass
    if flag:
        _parts.append("""<span>Yes</span>""")
    else:
        pass
    for item in items:
        pass
    while flag:
        pass
    match flag:
        case True:
            pass
        case False:
            _parts.append("""<span>False</span>""")
    try:
        pass
    except:
        _parts.append("""<span>Error</span>""")
    def empty():
        pass
    return "".join(_parts)
