rust/transpiler/snapshots/control_flow@loop_patterns@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/control_flow/loop_patterns.hyper
---
injections:
  - end: 156
    prefix: "from hyper import escape, replace_markers\n\ndef LoopPatterns(items: list, pairs: list, names: list, scores: list, matrix: list) -> str:\n    _parts = []\n    _parts.append(\"<ul>\")\n    for i, item in enumerate(items):\n        _parts.append(f\"\"\"<li data-index=\"{i}\">‹ESCAPE:{"
    start: 152
    suffix: ""
    type: python
  - end: 285
    prefix: "}›</li>\"\"\")\n    _parts.append(\"</ul>\")\n    _parts.append(\"<ol>\")\n    for num, item in enumerate(items, start=1):\n        _parts.append(f\"\"\"<li value=\"{num}\">‹ESCAPE:{"
    start: 281
    suffix: ""
    type: python
  - end: 375
    prefix: "}›</li>\"\"\")\n    _parts.append(\"</ol>\")\n    _parts.append(\"<dl>\")\n    for key, value in pairs:\n        _parts.append(f\"\"\"<dt>‹ESCAPE:{"
    start: 372
    suffix: ""
    type: python
  - end: 400
    prefix: "}›</dt><dd>‹ESCAPE:{"
    start: 395
    suffix: ""
    type: python
  - end: 513
    prefix: "}›</dd>\"\"\")\n    _parts.append(\"</dl>\")\n    _parts.append(\"<table>\")\n    for name, score in zip(names, scores):\n        _parts.append(f\"\"\"<tr><td>‹ESCAPE:{"
    start: 509
    suffix: ""
    type: python
  - end: 542
    prefix: "}›</td><td>‹ESCAPE:{"
    start: 537
    suffix: ""
    type: python
  - end: 694
    prefix: "}›</td></tr>\"\"\")\n    _parts.append(\"</table>\")\n    _parts.append(\"<table>\")\n    for row in matrix:\n        _parts.append(\"<tr>\")\n        for cell in row:\n            _parts.append(f\"\"\"<td>‹ESCAPE:{"
    start: 690
    suffix: ""
    type: python
  - end: 812
    prefix: "}›</td>\"\"\")\n        _parts.append(\"</tr>\")\n    _parts.append(\"</table>\")\n    _parts.append(\"<dl>\")\n    for k, v in items.items():\n        _parts.append(f\"\"\"<dt>‹ESCAPE:{"
    start: 811
    suffix: ""
    type: python
  - end: 833
    prefix: "}›</dt><dd>‹ESCAPE:{"
    start: 832
    suffix: ""
    type: python
  - end: 910
    prefix: "}›</dd>\"\"\")\n    _parts.append(\"</dl>\")\n    _parts.append(\"<ul>\")\n    for i in range(5):\n        _parts.append(f\"\"\"<li>Item ‹ESCAPE:{"
    start: 909
    suffix: ""
    type: python
  - end: 998
    prefix: "}›</li>\"\"\")\n    _parts.append(\"</ul>\")\n    _parts.append(\"<ul>\")\n    for item in reversed(items):\n        _parts.append(f\"\"\"<li>‹ESCAPE:{"
    start: 994
    suffix: "}›</li>\"\"\")\n    _parts.append(\"</ul>\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 71
    compiled_start: 60
    range_type: Python
    source_end: 11
    source_start: 0
  - compiled_end: 84
    compiled_start: 73
    range_type: Python
    source_end: 23
    source_start: 12
  - compiled_end: 97
    compiled_start: 86
    range_type: Python
    source_end: 35
    source_start: 24
  - compiled_end: 111
    compiled_start: 99
    range_type: Python
    source_end: 48
    source_start: 36
  - compiled_end: 125
    compiled_start: 113
    range_type: Python
    source_end: 61
    source_start: 49
  - compiled_end: 274
    compiled_start: 270
    range_type: Python
    source_end: 156
    source_start: 152
  - compiled_end: 444
    compiled_start: 440
    range_type: Python
    source_end: 285
    source_start: 281
  - compiled_end: 580
    compiled_start: 577
    range_type: Python
    source_end: 375
    source_start: 372
  - compiled_end: 605
    compiled_start: 600
    range_type: Python
    source_end: 400
    source_start: 395
  - compiled_end: 763
    compiled_start: 759
    range_type: Python
    source_end: 513
    source_start: 509
  - compiled_end: 788
    compiled_start: 783
    range_type: Python
    source_end: 542
    source_start: 537
  - compiled_end: 989
    compiled_start: 985
    range_type: Python
    source_end: 694
    source_start: 690
  - compiled_end: 1159
    compiled_start: 1158
    range_type: Python
    source_end: 812
    source_start: 811
  - compiled_end: 1180
    compiled_start: 1179
    range_type: Python
    source_end: 833
    source_start: 832
  - compiled_end: 1313
    compiled_start: 1312
    range_type: Python
    source_end: 910
    source_start: 909
  - compiled_end: 1454
    compiled_start: 1450
    range_type: Python
    source_end: 998
    source_start: 994
