rust/transpiler/snapshots/control_flow@loop_patterns@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/control_flow/loop_patterns.hyper
---
from hyper import escape, replace_markers

def LoopPatterns(items: list, pairs: list, names: list, scores: list, matrix: list) -> str:
    _parts = []
    _parts.append("<ul>")
    for i, item in enumerate(items):
        _parts.append(f"""<li data-index="{i}">‹ESCAPE:{item}›</li>""")
    _parts.append("</ul>")
    _parts.append("<ol>")
    for num, item in enumerate(items, start=1):
        _parts.append(f"""<li value="{num}">‹ESCAPE:{item}›</li>""")
    _parts.append("</ol>")
    _parts.append("<dl>")
    for key, value in pairs:
        _parts.append(f"""<dt>‹ESCAPE:{key}›</dt><dd>‹ESCAPE:{value}›</dd>""")
    _parts.append("</dl>")
    _parts.append("<table>")
    for name, score in zip(names, scores):
        _parts.append(f"""<tr><td>‹ESCAPE:{name}›</td><td>‹ESCAPE:{score}›</td></tr>""")
    _parts.append("</table>")
    _parts.append("<table>")
    for row in matrix:
        _parts.append("<tr>")
        for cell in row:
            _parts.append(f"""<td>‹ESCAPE:{cell}›</td>""")
        _parts.append("</tr>")
    _parts.append("</table>")
    _parts.append("<dl>")
    for k, v in items.items():
        _parts.append(f"""<dt>‹ESCAPE:{k}›</dt><dd>‹ESCAPE:{v}›</dd>""")
    _parts.append("</dl>")
    _parts.append("<ul>")
    for i in range(5):
        _parts.append(f"""<li>Item ‹ESCAPE:{i}›</li>""")
    _parts.append("</ul>")
    _parts.append("<ul>")
    for item in reversed(items):
        _parts.append(f"""<li>‹ESCAPE:{item}›</li>""")
    _parts.append("</ul>")
    return replace_markers("".join(_parts))
