rust/transpiler/snapshots/control_flow@match@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/control_flow/match.hyper
---
def Match(status: str) -> str:
    _parts = []
    match status:
        case "loading":
            _parts.append("""<p>Loading...</p>""")
        case "error":
            _parts.append("""<p>Error!</p>""")
        case _:
            _parts.append("""<p>Ready</p>""")
    return "".join(_parts)
